# aiven_challenge

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.all-in.yml  docker-compose.yml  pyproject.toml  pytest.ini  url_config.yaml
.github/workflows/: any.yml
pansen/aiven/: __init__.py  config.py  conftest.py  consumer.py  main.py  producer.py
pansen/aiven/lib/: __init__.py  db.py  fastapi.py  http.py  schedule.py  transport.py
pansen/aiven/lib/tests/: test_db.py  test_schedule.py  test_transport.py
pansen/aiven/tests/: test_config.py  test_consumer.py  test_integration_faust_consumer.py  test_main.py  test_playground.py  test_url_config.yaml
