[tool.poetry]
name = "pansen_aiven"
version = "0.0.1"
description = "Aiven coding challenge"
authors = [
    "pansen <andi@zerotired.com>"
]
license = "MIT"
readme = "README.md"
include = []
packages = [
    # This is required for our namespace package to work
    { include = "pansen" }
]
repository = "https://github.com/pansen/aiven_challenge"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: System :: Archiving",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[tool.poetry.dependencies]
python = "^3.8.6"
bcrypt = "*"
fastapi = "*"
uvicorn = "*"
passlib = "*"
python-dotenv = "*"

# http client stuff
requests = "*"
# see: https://docs.aiohttp.org/en/v2.3.4/
aiohttp = "*"
cchardet = "*"
aiodns = "*"
# another one
httpx = "*"


[tool.poetry.dev-dependencies]
nox = "^2020.8.22"
black = "^20.8b1"
flake8 = "^3.8.3"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
pytest = "^6.0.2"
mypy = "^0.760"
vcrpy = "*"


[tool.poetry.scripts]
pansen_aiven = 'pansen.aiven.main:run'


[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"


